kubernetes/apps/git-server/gitea/ingresses/gitea-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  annotations:
    cert-manager.io/cluster-issuer: iam-demo-certs-issuer
spec:
  rules:
    - host: git.iam-demo.test
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gitea-http
                port:
                  number: 3000
  tls:
    - hosts:
        - git.iam-demo.test
      secretName: iam-demo-gitea-tls
